# recipe-format

./: .gitignore  .ruff.toml  README.md  model.py  pixi.toml  pyproject.toml  ruff.toml  schema.json  variant_model.py  variant_schema.json
.github/workflows/: ci.yml
conda_recipe_v2_schema/: cli.py  model.py  validate.py
examples/: variant_config.yaml
examples/invalid/: README.md  bad_schema.yaml  complex1.yaml  simple1.yaml
examples/mamba/: recipe.yaml  variant_config.yaml
examples/valid/mamba/: recipe.yaml
examples/valid/post-process/: recipe.yaml
examples/valid/single-output/: recipe.yaml
examples/valid/staging/: recipe.yaml
examples/valid/xtensor/: recipe.yaml
examples/valid/zlib/: recipe.yaml
examples/xtensor/: recipe.yaml
examples/zlib/: recipe.yaml
rattler_build_recipe_format/: model.py
test/: test_recipe.py
tests/: test_cli.py  test_recipe.py  test_recipy.py
