[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conda-recipe-v2-schema"
description = "Model for the recipe used to build conda packages"
readme = "README.md"
maintainers = [
    { name = "Bas Zalmstra", email = "zalmstra.bas@gmail.com" },
    { name = "Julian Hofer", email = "julian.hofer@protonmail.com" },
]
requires-python = ">=3.8"
dependencies = ["pydantic>=2.8.2,<3", "typing-extensions~=4.10,<5"]
dynamic = ["version"]
license = { text = "BSD-3-Clause" }

[project.urls]
Home = "https://github.com/prefix-dev/recipe-format"
Code = "https://github.com/prefix-dev/recipe-format"
Issues = "https://github.com/prefix-dev/recipe-format"

[tool.hatch.version]
path = "conda_recipe_v2_schema/__init__.py"

[tool.hatch.build.targets.sdist]
only-include = ["conda_recipe_v2_schema", "tests"]
